[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/BoxColliders/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/BoxColliders/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Enemies/EnemyRange.gd" type="Script" id=3]

[node name="EnemyRange" type="KinematicBody2D"]
z_index = 3
collision_layer = 4
collision_mask = 7
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]

[node name="Hitbox" parent="." instance=ExtResource( 1 )]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]

[node name="StrikeTimer" type="Timer" parent="."]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="timeout" from="StrikeTimer" to="." method="_on_StrikeTimer_timeout"]
